@@ -1,5 +1,5 @@
 # vim: ts=8 sw=2 sts=0 noexpandtab:
-# $Id: HACKING 1279 2010-06-07 15:37:11Z tim.bunce@gmail.com $
+# $Id: HACKING 1320 2010-07-01 17:43:41Z tim.bunce@gmail.com $
 
 HACKING Devel::NYTProf
 ======================
@@ -133,26 +133,13 @@ Then we can test things like not having the sub line range for some subs.
 
 *** For core only
 
+See MemoryProfiling.pod file
+
 Store raw NYTPROF option string in the data file. 
 Include parsed version in report index page.
 
 Add actual size and mtime of fid to data file. (Already in data file as zero,
 just needs the stat() call.) Don't alter errno.
-
-Generalize the concepts of clocks. Have a structure defining a 'clock' with
-pointers to functions to get the time, subtract times to get ticks, return
-the resolution etc. Give them names and attributes (cpu, realtime etc).
-User could then pick a clock by name. By default we'd pick the best available
-realtime clock (or best available cputime clock if usecputime=1 option set).
-
-[Conjectural terminology: "clock" means some measuring mechanism, like
-get_clock(), times(), getrusage(), that may yield multiple pieces of
-information, and "measure" is one specific item.
-Clock "time"=times(), measures: "time.user", "time.user+sys" etc
-Clock "clock"=clock_gettime(), measures: "clock.realtime", "clock.monotonic" etc
-Clock "rusage"=getrusage(), measures: "rusage.majflt", "rusage.nvcsw" etc
-Clock "memory" measures: "memory.bytes", "mem.allocs" etc
-] 
 
 Add help option which would print a summary of the options and exit.
 Could also print list of available clocks for the clock=N option
@@ -177,14 +164,6 @@ per-package-name basis. For example, specify a regex and whenever a sub is
 entered (for the first time, to make it cheap) check if the sub name matches
 the regex. If it does then save the current $DB::profile value and set a new one.
 When the sub exits restore the previous $DB::profile value.
-
-Could optionally track resource usage per sub. Data sources could be perl sv
-arenas (clone visit() function from sv.c) to measure number of SVs & total SV
-memory, plus getrusage()). Abstract those into a structure with functions to
-subtract the difference. Then use the same logic to get inclusive and exclusive
-values as we use for inclusive and exclusive subroutine times.
-Also possibly track the memory allocated to lexical pad SVs
-(for given sub at given depth).
 
 Work around OP_UNSTACK bug (http://rt.perl.org/rt3/Ticket/Display.html?id=60954)
   while ( foo() ) {  # all calls to foo should be from here
@@ -346,9 +325,6 @@ Copy the nytprof.out file into the output report dir, so a report is more
 'self-contained' and can be archived and thrown around as a tarball/zip and
 still used for further analysis.
 
-The pseudo-sub "main::BEGIN" doesn't appear to be 'called' in NYTProf data.
-Perhaps it should.
-
 To stress-test NYTProf using perl's own test suite, set env vars:
   NYTPROF='file=/tmp/nytprof.out:addpid=1:nameanonsubs=0:nameevals=0'
   PERL5OPT='-d:NYTProf'
@@ -393,8 +369,6 @@ For eval fid reports:
 
 Fix inconsistency in results of href_for_*() subs
 
-Make generation of call graph .dot files optional and/or optimize to make faster
-
 String evals could/should be tied into the subroutine profiler.
 That would give inclusive timings which we don't have at the moment.
 The evals appear in the html report as if they're calls but the timings are
@@ -414,19 +388,4 @@ cases where the call to that sub wasn't recorded (eg pre 5.8.9 or the DBI's
 xs calling optimization) it'll be the most recent sub entry that was recorded.
 
 Generate extra report pages for xsubs in packages that don't have source code.
-
-USE_SITECUSTOMIZE causes two "Unable to determine line number" warnings at start of
-every program:
-  (-e:0)	nextstate
-  Unable to determine line number in -e
-  (-e:0)	gvsv(main::!)
-  (-e:0)	nextstate
-  Unable to determine line number in -e
-  (-e:0)	const(PV("/usr/local/perl512-dev/lib/site_perl/5.12.0/sitecustomize.pl"\0))
-because it unshifts some code onto PL_preambleav (like -M/-V etc):
-"BEGIN { do {local $!; -f '%s/sitecustomize.pl'} && do '%s/sitecustomize.pl' }"
-which toke.c then concats into PL_linestr in the 'PL_preambled' block
-(where PL_perldb, PL_minus_E, PL_minus_n, PL_minus_p are handled).
-Would be nice to find a way to silence the warnings in this case.
-Even better if the profiler could know it was profiling preamble code.
-I can't see an obvious way but I'm fairly clueless re toke.c
+They're currently all dumped into the 'main' file.
