@@ -2,7 +2,7 @@
 
 Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2010-06-19 19:56:26 +0100 (Sat, 19 Jun 2010) $ $Revision: 1316 $)
+(As of $Date: 2010-07-08 12:43:08 +0100 (Thu, 08 Jul 2010) $ $Revision: 1328 $)
 
 =cut
 
@@ -11,6 +11,15 @@ TODO soonish
 subroutine profiler docs need update
 add u key to treemap to trigger moving 'up' a level
 add "calls N subs" to treemap mouseover box
+
+=head2 Changes in Devel::NYTProf 4.04
+
+  Profile records presence of the slow regex match vars ($& $' $`).
+  The cumulative inclusive time measured for subs that are involved in
+    recursion is now reported as 'recursion: ... sum of overlapping time'.
+  Trace log messages are now flushed immediately.
+  Reduced risk of crashes in embedded applications that don't handle PL_endav
+    carefully, like mod_perl.
 
 =head2 Changes in Devel::NYTProf 4.03 (svn 1316) 19th June 2010
 
